[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
futures = "0.3.26"
libp2p = { version = "0.50.0", features = ["full"] }
tokio = { version = "1.25.0", features = ["full"] }
